<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/button_background"
    android:padding="15dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/dark_brown"
        android:fontFamily="@font/joystixmonospace"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textSize="18sp"
        android:textColor="@color/dark_brown"
        android:fontFamily="@font/joystixmonospace"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTryAgain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/try_again"
            android:background="@drawable/button_background"
            android:textColor="@color/dark_brown"
            android:textSize="16sp"
            android:fontFamily="@font/joystixmonospace"
            android:textStyle="bold"
            android:layout_marginEnd="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMainMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_menu"
            android:background="@drawable/button_background"
            android:textColor="@color/dark_brown"
            android:textSize="16sp"
            android:fontFamily="@font/joystixmonospace"
            android:textStyle="bold"
            android:layout_marginStart="10dp" />
    </LinearLayout>
</LinearLayout>
